ajustes de classes e apontamentos dos microservicos